Changed mailing list links to nabble2.

--- a/website/src/content/lists.html
+++ b/website/src/content/lists.html
@@ -18,7 +18,7 @@
                 <a href="mailto:user-unsubscribe@gradle.codehaus.org">Unsubscribe</a>
             </div>
         </td>
-        <td><a href="http://www.nabble.com/gradle-user-f31415.html">Nabble</a></td>
+        <td><a href="http://gradle.1045684.n5.nabble.com/gradle-user-f1431424.html">Nabble</a></td>
         <td>
             <a href="http://gradle.markmail.org/search/?q=#query:%20list%3Aorg.codehaus.gradle.user+page:1+state:facets">MarkMail</a>
         </td>
@@ -33,7 +33,7 @@
             <div><a href="mailto:dev-subscribe@gradle.codehaus.org">Subscribe</a> |
                 <a href="mailto:dev-unsubscribe@gradle.codehaus.org">Unsubscribe</a></div>
         </td>
-        <td><a href="http://www.nabble.com/gradle-dev-f31413.html">Nabble</a></td>
+        <td><a href="http://gradle.1045684.n5.nabble.com/gradle-dev-f1436218.html">Nabble</a></td>
         <td><a href="http://gradle.markmail.org/search/?q=#query:%20list%3Aorg.codehaus.gradle.dev+page:1+state:facets">MarkMail</a>
         </td>
         <td><a href="http://dir.gmane.org/gmane.comp.programming.tools.gradle.devel">Gmane</a></td>
@@ -52,7 +52,7 @@
         <td>Source changes, CI build results</td>
     </tr>
     <tr><td class="colHeader"><b>Aggregate</b></td>
-        <td><a href="http://old.nabble.com/codehaus---Gradle-f31414.html">Nabble</a></td>
+        <td><a href="http://gradle.1045684.n5.nabble.com/">Nabble</a></td>
         <td><a href="http://gradle.markmail.org/search/?q=">MarkMail</a></td>
         <td>-</td>
         <td>An aggregate of all mailing lists</td>
