--- a/website/src/content/downloads.html
+++ b/website/src/content/downloads.html
@@ -6,6 +6,7 @@
 <h2>${release.title} (${release.version})</h2>
 
 <ul>
+    <li><a href="http://docs.codehaus.org/display/GRADLE/Gradle+${release.releaseNoteVersion}+Release+Notes">Release notes</a></li>
     <li><a href="http://dist.codehaus.org/gradle/gradle-${release.version}-all.zip">gradle-${release.version}-all.zip</a>.
         Complete distribution, including documentation, samples, and source.</li>
     <li><a href="http://dist.codehaus.org/gradle/gradle-${release.version}-bin.zip">gradle-${release.version}-bin.zip</a>.
@@ -13,13 +14,14 @@
     <li><a href="http://dist.codehaus.org/gradle/gradle-${release.version}-src.zip">gradle-${release.version}-src.zip</a>.
         Source only distribution</li>
 </ul>
-<% } %>
 
+<% if (release == currentRelease) { %>
 <p>You can also <a href="build.html">build from source</a>.</p>
+<% } } %>
 
 <h2>Older Releases</h2>
 
-<p>You can find older releases at our codehaus distribution repository: <a href="http://dist.codehaus.org/gradle">http://dist.codehaus.org/gradle</a></p>
+<p>You can find older releases at our Codehaus distribution repository: <a href="http://dist.codehaus.org/gradle">http://dist.codehaus.org/gradle</a></p>
 
 <h2>Gradle Snapshots</h2>
 
