Some website updates: - uses the Gradle version the userguide docs were generated for, rather than the version in gradle.properties - fixed broken int tests - fixed some markup

--- a/website/src/content/get-excited.html
+++ b/website/src/content/get-excited.html
@@ -9,7 +9,7 @@
 
 <h2>Articles</h2>
 <ul>
-    <li><a href="other-resources/jaxenter-interview-gradle-2010.pdf"/>An interview about what makes Gradle special.</li>
+    <li><a href="other-resources/jaxenter-interview-gradle-2010.pdf">An interview about what makes Gradle special.</a></li>
 </ul>
 
 <h2>Other Stuff</h2>
