Updated information about our CI builds

--- a/website/src/content/downloads.html
+++ b/website/src/content/downloads.html
@@ -33,5 +33,5 @@ and even older releases at our <a href="http://dist.codehaus.org/gradle">Codehau
 They store the Gradle distributions for a couple of the last successful builds.</p>
 
 <h4>Teamcity</h4>
-<p>Click <a href="http://teamcity.jetbrains.com/viewLog.html?buildId=lastSuccessful&amp;buildTypeId=bt41&amp;tab=artifacts">here</a> to
+<p>Click <a href="http://builds.gradle.org/viewLog.html?buildId=lastSuccessful&amp;buildTypeId=bt2&amp;tab=artifacts">here</a> to
 get the artifact list of the last successful build. (choose the link 'Login as a Guest').</p>
