--- a/subprojects/core/src/main/resources/org/gradle/profile/ProfileTemplate.html
+++ b/subprojects/core/src/main/resources/org/gradle/profile/ProfileTemplate.html
@@ -1,157 +1,131 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+        "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-    <title>Profile</title>
-    <style type="text/css">
-        .date { text-align:right; }
-        td { vertical-align:top;}
-        .et { text-align:right; }
-        table table { border: solid black 1px;}
-        table table tr:nth-child(even) { background-color: #ddf; }
-        td {
-            vertical-align:top;
-            padding-left:5px;
-            padding-right:5px;
-            white-space:nowrap;
-        }
-        h1 {
-            font-size:100%;
-            font-family:sans-serif;
-        }
-        .indentPath { padding-left: 3em; }
-        .heading {
-            text-align:center;
-            font-family:sans-serif;
-            font-weight:bold;
-        }
-    </style>
-
+    <title>Profile Report</title>
+    <link rel="stylesheet" href="base-style.css" type="text/css"/>
+    <script type="text/javascript" src="report.js"></script>
 </head>
 <body>
+<div id="content">
+    <h1>Profile Report</h1>
     <div class="header">
-        <span></span>
-        <span class="date"></span>
+        <p>Profiled with tasks: ${build.taskDescription}</p>
+        <p>Run on: ${date.format(build.buildStarted)}</p>
     </div>
-    <table>
-        <tr>
-            <td>Profiled with tasks: ${build.taskDescription}</td>
-            <td>&nbsp;</td>
-            <td class="date">Run on: ${date.format(build.buildStarted)}</td>
-        </tr>
-        <tr>
-            <td>
-                <div id="summary">
-                    <div class="heading">Summary</div>
-                    <table cellpadding="0" cellspacing="0">
-                        <tr>
-                            <td>Total Build Time</td>
-                            <td class="et">${time.format(build.elapsedTotal)}</td>
-                        </tr>
-                        <tr>
-                            <td>Startup</td>
-                            <td class="et">${time.format(build.elapsedStartup)}</td>
-                        </tr>
-                        <tr>
-                            <td>Settings and BuildSrc</td>
-                            <td class="et">${time.format(build.elapsedSettings)}</td>
-                        </tr>
-                        <tr>
-                            <td>Loading Projects</td>
-                            <td class="et">${time.format(build.elapsedProjectsLoading)}</td>
-                        </tr>
-                        <tr>
-                            <td>Configuring Projects</td>
-                            <td class="et">${time.format(build.elapsedProjectsEvaluated)}</td>
-                        </tr>
-                        <tr>
-                            <td>Total Task Execution</td>
-                            <td class="et">${time.format(build.elapsedTotalExecutionTime)}</td>
-                        </tr>
-                    </table>
-                </div>
-            </td>
-            <td>
-                <div id="config">
-                    <div class="heading">Configuration</div>
-                    <table cellpadding="0" cellspacing="0">
-                        <tr>
-                            <td>Total</td>
-                            <td class="et">${time.format(build.projectConfiguration.elapsedTime)}</td>
-                        </tr>
-                        <%
-                            def projects = build.projectConfiguration.operations
-                            projects.sort { it.elapsedTime }
-                            projects = projects.reverse()
+    <div id="tabs">
+        <ul class="tabLinks">
+            <li><a href="#tab0">Summary</a></li>
+            <li><a href="#tab1">Configuration</a></li>
+            <li><a href="#tab2">Dependency Resolution</a></li>
+            <li><a href="#tab3">Task Execution</a></li>
+        </ul>
+        <div class="tab" id="tab0">
+            <h2>Summary</h2>
+            <table>
+                <thead><tr><th>Description</th><th>Duration</th></tr></thead>
+                <tr>
+                    <td>Total Build Time</td>
+                    <td class="et">${time.format(build.elapsedTotal)}</td>
+                </tr>
+                <tr>
+                    <td>Startup</td>
+                    <td class="et">${time.format(build.elapsedStartup)}</td>
+                </tr>
+                <tr>
+                    <td>Settings and BuildSrc</td>
+                    <td class="et">${time.format(build.elapsedSettings)}</td>
+                </tr>
+                <tr>
+                    <td>Loading Projects</td>
+                    <td class="et">${time.format(build.elapsedProjectsLoading)}</td>
+                </tr>
+                <tr>
+                    <td>Configuring Projects</td>
+                    <td class="et">${time.format(build.elapsedProjectsEvaluated)}</td>
+                </tr>
+                <tr>
+                    <td>Total Task Execution</td>
+                    <td class="et">${time.format(build.elapsedTotalExecutionTime)}</td>
+                </tr>
+            </table>
+        </div>
+        <div class="tab" id="tab1">
+            <h2>Configuration</h2>
+            <table>
+                <thead><tr><th>Project</th><th>Duration</th></tr></thead>
+                <tr>
+                    <td>Total</td>
+                    <td class="et">${time.format(build.projectConfiguration.elapsedTime)}</td>
+                </tr>
+                <%
+                def projects = build.projectConfiguration.operations
+                projects.sort { it.elapsedTime }
+                projects = projects.reverse()
 
-                            for (def project : projects) {
-                        %>
-                        <tr>
-                            <td>$project.path</td>
-                            <td class="et">${time.format(project.elapsedTime)}</td>
-                        </tr>
-                        <% } %>
-                    </table>
-                </div>
-            </td>
-            <td>
-                <div id="dependencyResolution">
-                    <div class="heading">Dependency Resolution</div>
-                    <table cellpadding="0" cellspacing="0">
-                        <tr>
-                            <td>Total</td>
-                            <td class="et">${time.format(build.dependencySets.elapsedTime)}</td>
-                        </tr>
-                        <%
-                            def dependencySets = build.dependencySets.operations
-                            dependencySets.sort { it.elapsedTime }
-                            dependencySets = dependencySets.reverse()
-                            for (def dependencySet : dependencySets) {
-                        %>
-                        <tr>
-                            <td>$dependencySet.path</td>
-                            <td class="et">${time.format(dependencySet.elapsedTime)}</td>
-                        </tr>
-                        <% } %>
-                    </table>
-                </div>
-            </td>
-            <td>
-                <div id="execution">
-                    <div class="heading">Task Execution</div>
-                    <table cellpadding="0" cellspacing="0">
-                        <%
-                            projects = build.projects
-                            projects.sort { it.elapsedTaskExecution }
-                            projects = projects.reverse()
-                            for (def project : projects) {
-                        %>
-                        <tr>
-                            <td>$project.path</td>
-                            <td class="et">${time.format(project.elapsedTaskExecution)}</td>
-                            <td>(total)</td>
-                        </tr>
-                        <%
-                            def profiles = project.taskProfiles
-                            profiles.sort { it.elapsedTime }
-                            profiles = profiles.reverse()
-                            for (def task : profiles) {
-                        %>
-                        <tr>
-                            <td class="indentPath">${task.path}</td>
-                            <td class="et">${time.format(task.elapsedTime)}</td>
-                            <td><%= task.state.getSkipped() ? task.state.skipMessage : (task.state.didWork ? '&nbsp;' : 'Did No Work')%></td>
-                        </tr>
-                        <%
-                            }
-                        %>
-                        <% } %>
-                    </table>
-                </div>
-
-            </td>
-        </tr>
-    </table>
-
+                for (def project : projects) {
+                %>
+                <tr>
+                    <td>$project.path</td>
+                    <td class="et">${time.format(project.elapsedTime)}</td>
+                </tr>
+                <% } %>
+            </table>
+        </div>
+        <div class="tab" id="tab2">
+            <h2>Dependency Resolution</h2>
+            <table>
+                <thead><tr><th>Dependencies</th><th>Duration</th></tr></thead>
+                <tr>
+                    <td>Total</td>
+                    <td class="et">${time.format(build.dependencySets.elapsedTime)}</td>
+                </tr>
+                <%
+                def dependencySets = build.dependencySets.operations
+                dependencySets.sort { it.elapsedTime }
+                dependencySets = dependencySets.reverse()
+                for (def dependencySet : dependencySets) {
+                %>
+                <tr>
+                    <td>$dependencySet.path</td>
+                    <td class="et">${time.format(dependencySet.elapsedTime)}</td>
+                </tr>
+                <% } %>
+            </table>
+        </div>
+        <div class="tab" id="tab3">
+            <h2>Task Execution</h2>
+            <table cellpadding="0" cellspacing="0">
+                <thead><tr><th>Task</th><th>Duration</th><th>Result</th></tr></thead>
+                <%
+                projects = build.projects
+                projects.sort { it.tasks.elapsedTime }
+                projects = projects.reverse()
+                for (def project : projects) {
+                %>
+                <tr>
+                    <td>$project.path</td>
+                    <td class="et">${time.format(project.tasks.elapsedTime)}</td>
+                    <td>(total)</td>
+                </tr>
+                <%
+                def profiles = project.tasks.operations
+                profiles.sort { it.elapsedTime }
+                profiles = profiles.reverse()
+                for (def task : profiles) {
+                %>
+                <tr>
+                    <td class="indentPath">${task.path}</td>
+                    <td class="et">${time.format(task.elapsedTime)}</td>
+                    <td><%= task.state.getSkipped() ? task.state.skipMessage : (task.state.didWork ? '&nbsp;' : 'Did No Work')%></td>
+                </tr>
+                <%
+                }
+                %>
+                <% } %>
+            </table>
+        </div>
+    </div>
+</div>
 </body>
 </html>
